[gd_scene load_steps=3 format=3 uid="uid://nf0nxrkkwiq6"]

[ext_resource type="Script" path="res://scripts/choice.gd" id="1_mu21v"]
[ext_resource type="Script" path="res://scripts/buy.gd" id="2_037sw"]

[node name="Control" type="CanvasLayer"]
script = ExtResource("1_mu21v")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.286018, 6.81291e-05, 0.294995, 1)
metadata/_edit_use_anchors_ = true

[node name="RichTextLabel" type="RichTextLabel" parent="ColorRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -204.0
offset_top = 47.0
offset_right = 204.0
offset_bottom = 129.0
grow_horizontal = 2
theme_override_font_sizes/bold_italics_font_size = 25
theme_override_font_sizes/italics_font_size = 25
theme_override_font_sizes/mono_font_size = 25
theme_override_font_sizes/normal_font_size = 48
theme_override_font_sizes/bold_font_size = 25
text = "Choose your Fox"

[node name="ChoiceScreen" type="ColorRect" parent="ColorRect"]
unique_name_in_owner = true
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 46.0
offset_top = 115.0
offset_right = -44.0
offset_bottom = -43.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.657023, 0.000371281, 0.669241, 1)

[node name="ColorRect" type="ColorRect" parent="ColorRect/ChoiceScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -144.0
offset_top = -153.0
offset_right = 140.0
offset_bottom = 130.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="ColorRect2" type="ColorRect" parent="ColorRect/ChoiceScreen/ColorRect"]
layout_mode = 0
offset_left = 22.0
offset_top = -56.0
offset_right = 265.0
color = Color(0.412152, 0.412152, 0.412152, 1)

[node name="ChoiceFox" type="Button" parent="ColorRect/ChoiceScreen/ColorRect"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 56.0
offset_top = 325.0
offset_right = 214.0
offset_bottom = 371.0
action_mode = 0
text = "buy"
script = ExtResource("2_037sw")

[node name="Title2" type="RichTextLabel" parent="ColorRect/ChoiceScreen/ColorRect"]
layout_mode = 0
offset_left = 38.0
offset_top = -41.0
offset_right = 254.0
offset_bottom = -10.0
bbcode_enabled = true
text = "[center]Fox[/center] "

[node name="Description2" type="RichTextLabel" parent="ColorRect/ChoiceScreen/ColorRect"]
layout_mode = 0
offset_left = 18.0
offset_right = 264.0
offset_bottom = 280.0
bbcode_enabled = true
text = "
[center]DESCRIPTION[/center] 

COST:
0
"

[node name="ColorRect2" type="ColorRect" parent="ColorRect/ChoiceScreen"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 48.0
offset_top = -154.0
offset_right = 335.0
offset_bottom = 126.0
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="ColorRect2" type="ColorRect" parent="ColorRect/ChoiceScreen/ColorRect2"]
layout_mode = 0
offset_left = 22.0
offset_top = -56.0
offset_right = 265.0
color = Color(0.412152, 0.412152, 0.412152, 1)

[node name="ChoiceArctic" type="Button" parent="ColorRect/ChoiceScreen/ColorRect2"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 62.0
offset_top = 324.0
offset_right = 220.0
offset_bottom = 370.0
text = "buy"
script = ExtResource("2_037sw")

[node name="Title1" type="RichTextLabel" parent="ColorRect/ChoiceScreen/ColorRect2"]
layout_mode = 0
offset_left = 38.0
offset_top = -41.0
offset_right = 254.0
offset_bottom = -10.0
bbcode_enabled = true
text = "[center]Arctic Fox[/center] "

[node name="Description1" type="RichTextLabel" parent="ColorRect/ChoiceScreen/ColorRect2"]
layout_mode = 0
offset_left = 18.0
offset_right = 264.0
offset_bottom = 280.0
bbcode_enabled = true
text = "
[center]DESCRIPTION[/center] 

COST:
0
"

[node name="ColorRect3" type="ColorRect" parent="ColorRect/ChoiceScreen"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -331.0
offset_top = -153.0
offset_right = -47.0
offset_bottom = 130.0
grow_horizontal = 0
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="ColorRect2" type="ColorRect" parent="ColorRect/ChoiceScreen/ColorRect3"]
layout_mode = 0
offset_left = 22.0
offset_top = -55.0
offset_right = 265.0
offset_bottom = 1.0
color = Color(0.412152, 0.412152, 0.412152, 1)

[node name="ChoiceToxic" type="Button" parent="ColorRect/ChoiceScreen/ColorRect3"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 62.0
offset_top = 324.0
offset_right = 220.0
offset_bottom = 370.0
text = "buy"
script = ExtResource("2_037sw")

[node name="Title3" type="RichTextLabel" parent="ColorRect/ChoiceScreen/ColorRect3"]
layout_mode = 0
offset_left = 38.0
offset_top = -41.0
offset_right = 254.0
offset_bottom = -10.0
bbcode_enabled = true
text = "[center]Toxic Fox[/center] "

[node name="Description3" type="RichTextLabel" parent="ColorRect/ChoiceScreen/ColorRect3"]
layout_mode = 0
offset_left = 18.0
offset_right = 264.0
offset_bottom = 280.0
bbcode_enabled = true
text = "
[center]DESCRIPTION[/center] 

COST:
0
"
